添加样例代码。

--- a/Example/Podfile
+++ b/Example/Podfile
@@ -8,8 +8,8 @@ target 'DeviceInfo_iOS_Example' do
   target 'DeviceInfo_iOS_Tests' do
     inherit! :search_paths
 
-    pod 'Quick', '~> 2.2.0'
-    pod 'Nimble', '~> 8.0.7'
-    pod 'FBSnapshotTestCase' , '~> 2.1.4'
+#    pod 'Quick', '~> 2.2.0'
+#    pod 'Nimble', '~> 8.0.7'
+#    pod 'FBSnapshotTestCase' , '~> 2.1.4'
   end
 end
